tests/compile-fail/cases/tainted_into_display.stderr
error[E0277]: `Tainted<Vec<u8>>` doesn't implement `std::fmt::Display`
 --> cases/tainted_into_display.rs:5:27
  |
5 |     let _ = format!("{}", t);
  |                      --   ^ `Tainted<Vec<u8>>` cannot be formatted with the default formatter
  |                      |
  |                      required by this formatting parameter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Tainted<Vec<u8>>`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
